Bug 141422 - UNO Object Inspector is not visible when launched for the first time
Summary: UNO Object Inspector is not visible when launched for the first time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: UNO-Object-Inspector
  Show dependency treegraph
 
Reported: 2021-04-01 10:00 UTC by Xisco Faulí
Modified: 2021-05-05 14:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
How it looks in LibreOffice 7.2 master (gen) (7.95 KB, image/png)
2021-04-27 07:37 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-04-01 10:00:17 UTC
Steps to reproduce:
1. Clean the user profile
3. Open Writer
3. Tools - Development tools

-> The toolbar is not displayed. However, something should be displayed, so the user knows it's open. At least this is the behaviour of the inspector in Firefox or Chrome

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: c088d26578d1be352efa49bd164a8217627648de
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gülşah Köse 2021-04-27 06:14:00 UTC
When I did all the steps I see a zero-sized toolbar at the bottom. Xisco can you confirm the bug is this? Or you don't see even that zero-sized toolbar at the bottom?
Comment 2 Xisco Faulí 2021-04-27 07:37:44 UTC
Created attachment 171438 [details]
How it looks in LibreOffice 7.2 master (gen)
Comment 3 Xisco Faulí 2021-04-27 07:38:33 UTC
(In reply to Gülşah Köse from comment #1)
> When I did all the steps I see a zero-sized toolbar at the bottom. Xisco can
> you confirm the bug is this? Or you don't see even that zero-sized toolbar
> at the bottom?

Hi Gülşah,
See the screenshot. That's what I see when I launch the object inspector for the first time
Comment 4 Commit Notification 2021-04-29 18:08:32 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c6692f88df3f7447138fc953f11d8587d51f093

tdf#141422 Set inital height of the develepment tool window.

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2021-05-05 12:18:27 UTC
It's ok now.
Verified in
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 1a99b4e44190e182d56a04678850d62635d74c65
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2021-05-05 14:30:50 UTC
Yes, verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 1a99b4e44190e182d56a04678850d62635d74c65
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Gülşah Köse, thanks for fixing this issue!!