tdf#141422 Set inital height of the develepment tool window.

Change-Id: I703edc227ee163e2a7b8fb9b03c71f055c6e0a3b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114775
Tested-by: Jenkins
Reviewed-by: Gülşah Köse <gulsah.kose@collabora.com>